Rework scientists-in-crew layout, other styling improvements

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -23,9 +23,8 @@
 
 :root {
     --color-add-button: rgba(255, 255, 255, 0.25);
-    --color-available-products-bg: #1a1a1a;
     --color-body-bg: #222;
-    --color-nav-bg: #111;
+    --color-dark-bg: #111;
     --color-category-volatile: rgb(91, 192, 245);
     --color-category-volatile-bg: rgba(91, 192, 245, 0.1);
     --color-category-organic: rgb(120, 211, 86);
