Require confirmation for deleting a process or processor

--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -88,6 +88,8 @@
                     input { width: 100%; }
                 }
             }
+
+            .overlay-lists .overlay-list { min-width: 200px; }
         }
     }
 
