--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -1,3 +1,5 @@
+@use 'core';
+
 @mixin overlay-cta-button {
     background-color: black;
     cursor: pointer;
@@ -78,7 +80,7 @@
                         gap: 8px;
                         padding: 8px 16px;
 
-                        &:hover { @include hover-lighten-bg; }
+                        &:hover { @include core.hover-lighten-bg; }
                     }
                 }
 
@@ -152,10 +154,10 @@
 
                     .product-icon { --product-icon-size: 24px; }
 
-                    .product-name { @include single-line-with-ellipsis; }
+                    .product-name { @include core.single-line-with-ellipsis; }
 
                     &:hover {
-                        @include hover-lighten-bg;
+                        @include core.hover-lighten-bg;
                         color: white;
                     }
                 }
@@ -330,13 +332,13 @@
                         .product-icon { --product-icon-size: 24px; }
 
                         .product-name {
-                            @include single-line-with-ellipsis;
+                            @include core.single-line-with-ellipsis;
                             font-size: 90%;
                             max-width: 160px;
                         }
 
                         &:hover {
-                            @include hover-lighten-bg;
+                            @include core.hover-lighten-bg;
                             color: white;
                         }
 
@@ -396,7 +398,7 @@
                                 opacity: 0.75;
                             }
 
-                            .process-name { @include single-line-with-ellipsis; }
+                            .process-name { @include core.single-line-with-ellipsis; }
 
                             .process-materials {
                                 align-items: center;
@@ -454,7 +456,7 @@
 .overlay-add-output-product {
     .overlay-header {
         .industry-tier {
-            @include hover-lighten-bg;
+            @include core.hover-lighten-bg;
             color: var(--color-text-normal);
             line-height: 32px;
             padding: 0 16px;
@@ -489,7 +491,7 @@
 
                     .product-icon { --product-icon-size: 24px; }
 
-                    .product-name { @include single-line-with-ellipsis; }
+                    .product-name { @include core.single-line-with-ellipsis; }
 
                     .process-name {
                         color: var(--color-processor);
@@ -505,7 +507,7 @@
                     }
 
                     &:hover {
-                        @include hover-lighten-bg;
+                        @include core.hover-lighten-bg;
                         color: white;
                     }
                 }
@@ -563,7 +565,7 @@
             }
 
             &:hover:not(.list-item-header) {
-                @include hover-lighten-bg;
+                @include core.hover-lighten-bg;
                 color: white;
             }
         }
