Improve wallet logic, use dynamic chain ID

--- a/src/styles/main-menu.scss
+++ b/src/styles/main-menu.scss
@@ -107,6 +107,8 @@
             gap: 8px;
 
             img { height: 16px; }
+
+            .test-signature { cursor: pointer; padding-right: 24px; &:hover { color: white; } } //// TEST
         }
     }
 
