--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -62,22 +62,37 @@ body {
     padding-top: var(--nav-height);
     position: relative;
 
-    // WIP
-    &::before {
-        align-items: center;
-        background-color: rgb(var(--rgb-processor-extractor));
-        bottom: 0;
-        color: black;
-        content: 'Work in progress';
-        display: flex;
-        font-size: 80%;
-        height: 64px;
-        justify-content: center;
-        left: 0;
-        position: fixed;
-        text-align: center;
-        width: 64px;
-        z-index: 1;
+    &.is-pending {
+        &::before,
+        &::after {
+            bottom: 0;
+            left: 0;
+            position: fixed;
+            right: 0;
+            top: 0;
+            z-index: 3;
+        }
+
+        &::before {
+            backdrop-filter: blur(16px);
+            background-color: rgba(0, 0, 0, 0.25);
+            content: '';
+            display: block;
+        }
+
+        &::after {
+            align-items: center;
+            animation: roate-pending 3000ms linear infinite;
+            content: '⚛';
+            display: flex;
+            font-size: 300%;
+            justify-content: center;
+            opacity: 0.75;
+
+            @keyframes roate-pending {
+                100% { transform: rotate(360deg); }
+            }
+        }
     }
 }
 
