--- a/src/styles/industry-plan.scss
+++ b/src/styles/industry-plan.scss
@@ -32,7 +32,7 @@
             #startup-products {
                 &::before {
                     background-color: var(--color-warning);
-                    content: 'Some processes are broken, due to inputs without any source.';
+                    content: 'Some processes are broken, due to inputs without any source, or incorrect building for the linked in-game lot.';
                     display: block;
                     font-size: 90%;
                     margin-bottom: 32px;
@@ -461,11 +461,27 @@
                     .processor {
                         max-width: 240px;
 
+                        &.has-location {
+                            .processor-header {
+                                .processor-info { background-color: var(--color-processor-highlight-subtle); }
+                            }
+                        }
+
+                        &.invalid-location {
+                            outline: 1px solid var(--color-warning);
+
+                            .processor-location {
+                                background-color: var(--color-warning);
+                                border: none;
+                                color: white;
+                                opacity: 1;
+                            }
+                        }
+
                         .processor-location {
                             background-color: var(--color-processor-processes-bg);
                             border: 1px solid var(--color-processor-highlight-subtle);
                             border-bottom: none;
-                            border-right-style: outset;
                             color: var(--color-processor);
                             display: flex;
                             font-size: 80%;
