--- a/src/styles/industry-plan.scss
+++ b/src/styles/industry-plan.scss
@@ -477,7 +477,7 @@
 
                         &.has-location {
                             .processor-header {
-                                .processor-info { background-color: var(--color-processor-highlight-subtle); }
+                                .link-lot { background-color: var(--color-processor-highlight-subtle); }
                             }
                         }
 
@@ -497,12 +497,14 @@
                             border: 1px solid var(--color-processor-highlight-subtle);
                             border-bottom: none;
                             color: var(--color-processor);
+                            cursor: pointer;
                             display: flex;
                             font-size: 80%;
                             gap: 8px;
                             justify-content: space-between;
-                            opacity: 0.75;
                             padding: 4px 8px;
+
+                            &:hover { color: white; }
 
                             &:empty { display: none; }
 
@@ -523,7 +525,7 @@
 
                             &::before { cursor: grab; }
 
-                            .processor-info {
+                            .link-lot {
                                 align-items: center;
                                 bottom: 0;
                                 cursor: pointer;
