--- a/src/styles/industry-plan.scss
+++ b/src/styles/industry-plan.scss
@@ -490,6 +490,25 @@
                             }
                         }
 
+                        &.idle:not(.invalid-location) {
+                            outline: 1px solid black;
+                            
+                            &::before {
+                                animation: flash-idle 1s ease infinite;
+                                background-color: black;
+                                color: var(--color-processor);;
+                                content: 'Idle in-game';
+                                display: block;
+                                font-size: 80%;
+                                padding: 4px 8px 5px 8px;
+                                text-align: center;
+
+                                @keyframes flash-idle {
+                                    50% { color: var(--color-processor-highlight-subtle); }
+                                }
+                            }
+                        }
+
                         .processor-location {
                             background-color: var(--color-processor-processes-bg);
                             border: 1px solid var(--color-processor-highlight-subtle);
