Link Lot overlay: list matching buildings controlled in-game

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -30,6 +30,7 @@
     --rgb-processor-empty-lot: 241, 131, 97;
     --color-add-button: rgba(255, 255, 255, 0.25);
     --color-body-bg: #222;
+    --color-semi-dark-bg: #1a1a1a;
     --color-dark-bg: #111;
     --color-category-volatile: rgb(91, 192, 245);
     --color-category-volatile-bg: rgba(91, 192, 245, 0.1);
